[package]
name = "libp2wviewer"
version = "1.1.0"
edition = "2021"
description = "A CLI tool to encrypt/decrypt images into self-contained noise images"
license = "Apache 2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
anyhow = "1.0.99"
image = "0.25.8"
png = "0.18.0"
aes-gcm = "0.10.3"
rand = "0.9.2"
argon2 = "0.5.3"
sha2 = "0.10.9"
byteorder = "1.5.0"
hex = "0.4.3"
log = "0.4.28"
env_logger = "0.11.8"
regex = "1.11.2"